--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
   <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="jquery.lazy.min.js"></script>
   <script type="text/javascript" src="popup.js"></script>
   <link rel="stylesheet" type="text/css" href="popup.css">
+  <script>
+
+  </script>
   <title>Links grabber</title>
 </head>
 <body class="body">
